# brioche-legacy

./: .gitmodules  Cargo.toml  README.md
brioche/: Cargo.toml
brioche/src/: js.rs  main.rs
crates/brioche/: Cargo.toml
crates/brioche-common/: Cargo.toml
crates/brioche-common/src/: lib.rs
crates/brioche/src/: main.rs  recipe.rs
example-repo/brioche-bootstrap-phase1-binutils/: brioche.js
example-repo/brioche-bootstrap-phase1-gcc/: brioche.js
example-repo/brioche-bootstrap-phase1-glibc/: brioche.js
example-repo/brioche-bootstrap-phase1-linux-headers/: brioche.js
example-repo/file/: brioche.js
example-repo/hello/: brioche.js
src/: bake.rs  bootstrap_env.rs  content.rs  hash.rs  main.rs  recipe.rs  state.rs
