[package]
name = "brioche"
version = "0.1.0"
authors = ["Kyle Lacy <kylelacy+git@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ducc = "0.1.2"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
ducc-serde = "0.1.0"
structopt = "0.3.3"
