[package]
name = "brioche"
version = "0.1.0"
authors = ["Kyle Lacy <kylelacy+git@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ducc = { path = "../vendor/ducc/ducc" }
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
ducc-serde = { path = "../vendor/ducc/ducc-serde" }
structopt = "0.3.3"
err-derive = "0.2.2"
