[package]
name = "brioche"
version = "0.0.0"
authors = ["Kyle Lacy <kylelacy+git@pm.me>"]
edition = "2018"
description = "A practical package manager and build tool"
repository = "https://github.com/brioche-dev/brioche"
license = "MIT"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ducc = { version = "0.1.2-brioche", path = "../vendor/ducc/ducc", package = "brioche-ducc" }
ducc-serde = { version = "0.1.2-brioche", path = "../vendor/ducc/ducc-serde", package = "brioche-ducc-serde" }
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
structopt = "0.3.3"
err-derive = "0.2.2"
