[package]
name = "brioche"
version = "0.0.1"
authors = ["Kyle Lacy <cargo@kyle.space>"]
edition = "2021"
description = "A practical package manager and build tool"
repository = "https://github.com/brioche-dev/brioche"
license = "MIT"

[dependencies]
anyhow = "1.0.54"
brioche-common = { path = "../brioche-common" }
structopt = "0.3.26"
