[package]
name = "brioche"
version = "0.0.1"
authors = ["Kyle Lacy <cargo@kyle.space>"]
edition = "2021"
description = "A practical package manager and build tool"
repository = "https://github.com/brioche-dev/brioche"
license = "MIT"

[dependencies]
anyhow = "1.0.54"
brioche-common = { path = "../brioche-common" }
futures-util = "0.3.21"
hex = "0.4.3"
hex-literal = "0.3.4"
reqwest = { version = "0.11.9", default-features =  false, features = ["rustls-tls", "stream"] }
sha2 = "0.10.2"
structopt = "0.3.26"
tokio = { version = "1.17.0", features = ["full"] }
url = "2.2.2"
