[package]
name = "brioche"
version = "0.0.1"
authors = ["Kyle Lacy <cargo@kyle.space>"]
edition = "2021"
description = "A practical package manager and build tool"
repository = "https://github.com/brioche-dev/brioche"
license = "MIT"

[dependencies]
anyhow = "1.0.54"
async-compression = { version = "0.3.12", features = ["all", "tokio"] }
brioche-common = { path = "../brioche-common" }
futures-util = "0.3.21"
hex = "0.4.3"
hex-literal = "0.3.4"
libmount = "0.1.15"
nix = "0.23.1"
reqwest = { version = "0.11.9", default-features =  false, features = ["rustls-tls", "stream"] }
sha2 = "0.10.2"
structopt = "0.3.26"
tokio = { version = "1.17.0", features = ["full"] }
tokio-tar = "0.3.0"
tokio-util = { version = "0.7.0", features = ["io"] }
unshare = { git = "https://github.com/brioche-dev/unshare.git" }
url = "2.2.2"
which = "4.2.4"

[features]
